<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_drawer_bg" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menudrawer_first_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:paddingBottom="@dimen/menudrawer_item_padding_top"
            android:paddingLeft="@dimen/menudrawer_item_padding_right"
            android:paddingRight="@dimen/menudrawer_item_padding_right"
            android:paddingTop="@dimen/menudrawer_item_padding_top"
            android:text="@string/home"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/text_aboutQatar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menudrawer_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:paddingBottom="@dimen/menudrawer_item_padding_top"
            android:paddingLeft="@dimen/menudrawer_item_padding_right"
            android:paddingRight="@dimen/menudrawer_item_padding_right"
            android:paddingTop="@dimen/menudrawer_item_padding_top"
            android:text="@string/about_qatar"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/text_mediaCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menudrawer_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:paddingBottom="@dimen/menudrawer_item_padding_top"
            android:paddingLeft="@dimen/menudrawer_item_padding_right"
            android:paddingRight="@dimen/menudrawer_item_padding_right"
            android:paddingTop="@dimen/menudrawer_item_padding_top"
            android:text="@string/media_center"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/text_nationalDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menudrawer_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:paddingBottom="@dimen/menudrawer_item_padding_top"
            android:paddingLeft="@dimen/menudrawer_item_padding_right"
            android:paddingRight="@dimen/menudrawer_item_padding_right"
            android:paddingTop="@dimen/menudrawer_item_padding_top"
            android:text="@string/national_day"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_medium" />

        <TextView
            android:id="@+id/text_sponsors"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/menudrawer_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:paddingBottom="@dimen/menudrawer_item_padding_top"
            android:paddingLeft="@dimen/menudrawer_item_padding_right"
            android:paddingRight="@dimen/menudrawer_item_padding_right"
            android:paddingTop="@dimen/menudrawer_item_padding_top"
            android:text="@string/sponsors"
            android:textColor="@color/font_white"
            android:textSize="@dimen/text_medium" />

        <LinearLayout
            android:animateLayoutChanges="true"
            android:layout_marginTop="@dimen/menudrawer_item_margin_top"
            android:background="@drawable/menu_drawer_selected_item_bg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/text_language"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/menudrawer_item_padding_top"
                android:paddingLeft="@dimen/menudrawer_item_padding_right"
                android:paddingRight="@dimen/menudrawer_item_padding_right"
                android:paddingTop="@dimen/menudrawer_item_padding_top"
                android:text="@string/language"
                android:textColor="@color/font_white"
                android:textSize="@dimen/text_medium" />

            <RadioGroup
                android:paddingBottom="@dimen/menudrawer_item_padding_top"
                android:id="@+id/radioGroup_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="@dimen/menudrawer_radio_group_margin"
                android:orientation="horizontal"
                android:visibility="gone" >

                <RadioButton
                    android:id="@+id/radio_en"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/english"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/text_small" />

                <RadioButton
                    android:id="@+id/radio_ar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/menudrawer_radio_lang_margin"
                    android:text="@string/arabic"
                    android:textColor="@color/font_white"
                    android:textSize="@dimen/text_small" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</ScrollView>